karnc/tests/fixtures/positive/150_cron_scheduled_time/src/ticker.karn
context ticker

service clock {
  -- v0.10a: a cron handler may take the scheduled fire time (epoch ms) as an
  -- optional `Int` parameter.
  on cron "*/5 * * * *" (at: Int) -> Effect[Result[(), String]] {
    Ok(())
  }
}
